	  next outgoing packet from the TX done interrupt handling.  From
	  Max Holtzberg (2013-9-27)
	* sched/os_start.c:  Should not call group_setupidlefiles() if there
	  are not file descriptors (and, hence, no file system) (2013-9-27).
	* arch/arm/src/sama5/sam_gmac.c:  GMAC driver and GMII logic is
	  code complete and readay for test (2013-9-27)
	* configs/compal_e86: Basic board support for the Motorola C139
	  (Compal E86) phone.  From Craig Comstock (2013-9-27).
	* configs/compal_e86: Converted to use the kconfig-frontends
	  tools (2013-9-27).
	* drivers/net/encx24j500.c: Use separate pools for RX and TX
	  descriptors.  From Max Holtzberg (2013-9-28).
	* nuttx/fs/fs_sendfile.c, nuttx/net/net_sendfile.c, and other file:
	  Integrate an optimized sendfile() operation from Max Holtzberg
	  (2013-9-28).
	* tools/mkdeps.*, nuttx/mm/Makefile, nuttx/libc/Makefile:  Dependency
	  generation generation was broken for directories that keep objects in
	  a sub-directory.  Fixed by adding a object path to the mkdeps.c,
	  mkdeps.bat, mkdeps.sh tools (2013-0-29).
	* arch/arm/src/sama5/chip/sam_adc.h:  ADC register definition file.
	  Incomplete on initial check-in (2013-9-29).
	* arch/arm/src/sama5/sam_adc.c and .h:  Framework for an ADC
	  driver to come (just empty "skeleton" files on initial commit)
	  (2013-9-30).
	* arch/arm/src/sama5/sam_touchscreen.h and .h:  Framework for a
	  touchscreen driver (also an empty "skeleton" file on the initial
	  commit) (2013-9-30).
	* arch/arm/src/kl/kl_lowgetc.c and .h:  First cut at low-level
	  getc() function for operation with no file system (and, hence,
	  no serial driver) (from Alan Carvalho de Assis, 2013-9-30).
	* configs/freedom-kl25z/minnsh:  A new configuration that is
	  an experiement to see how small we can get the NuttX footprint.
	  From Carvalho de Assis. (2013-9-30).
	* net/net_sendfile:  The high performance sendfile logic is
	  now functional.  From Max Holtzberg (2013-9-30).
